qmlformat: fix crash on StatementLists

The pointer returned by ensureCommentForNode() is invalidated when the
m_commentedElements map is modified, for example when inserting a new
comment via another ensureCommentForNode().

In the StatementList, we actually don't need to create a comment, we
just need to lookup one comment, so partially revert the apparently
drive-by change from b91ca3e0bc0b7e0b1ec53b41698d2325337dae59.

A separate commit will make ensureCommentForNode() private to avoid
similar crashes in the future.

Fixes: QTBUG-137413
Pick-to: 6.8
Change-Id: I6e281cc155e2179a880fa4a876133d90c4afae75
Reviewed-by: Olivier De Cannière <olivier.decanniere@qt.io>
(cherry picked from commit cb1eaacd1955f3dc991b5a805dc45f0609ccbdec)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4150f0180ed0fd0258f49b6ac6f523dd9c957ed5)